--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -677,11 +677,11 @@
                     <td class="winning" id="lbw">57</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">62</td>
+                    <td class="machine">22</td>
+                    <td class="machine">50</td>
+                    <td class="machine">68</td>
+                    <td class="machine" id="lbm">4</td>
                 </tr>
             </tbody>
 
