--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">monday 8/4/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">18 - 27 - 8 - 41 - 62</p>
-                <p class="machine">31 - 76 - 6 - 16 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">28 - 15 - 51 - 87 - 5</p>
-                <p class="machine">62 - 45 - 32 - 67 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">62 - 40 - 17 - 83 - 6</p>
-                <p class="machine">14 - 47 - 76 - 39 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">63 - 56 - 4 - 39 - 83</p>
-                <p class="machine">29 - 60 - 15 - 64 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">46 - 70 - 16 - 53 - 69</p>
-                <p class="machine">31 - 25 - 6 - 29 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">82 - 28 - 68 - 89 - 71</p>
-                <p class="machine">70 - 24 - 45 - 31 - 7</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 9/4/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Lucky-g</h3>
                 <p class="winning">39 - 59 - 5 - 84 - 57</p>
-                <p class="machine"></p>        
+                <p class="machine">62 - 22 - 50 - 68 - 4</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">84 - 11 - 86 - 74 - 46</p>
                 <p class="machine">28 - 44 - 5 - 22 - 67</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 10/04/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">45 - 56 - 3 - 47 - 82</p>
+                <p class="machine">28 - 89 - 87 - 62 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">61 - 82 - 36 - 84 - 32</p>
+                <p class="machine">12 - 17 - 2 - 42 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">7 - 65 - 82 - 16 - 33</p>
+                <p class="machine">6 - 48 - 42 - 60 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">62 - 60 - 84 - 65 - 40</p>
+                <p class="machine">79 - 54 - 22 - 78 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">30 - 13 - 70 - 1 - 22</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">40 - 62 - 68 - 82 - 75</p>
+                <p class="machine">48 - 66 - 46 - 67 - 50</p>        
             </article>
         </section>
     </div>
