--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
             <nav>
                 <h1 class="list-of-games">List of Games</h1>
                 <ul>                   
-                    <li><a href="./GAMES/1Diamond.html" target="_blank">Diamond <sup>1</sup></a></li>
-                    <li><a href="./GAMES/2People.html" target="_blank">People <sup>2</sup></a></li>
-                    <li><a href="./GAMES/3Bingo.html" target="_blank">Bingo <sup>3</sup></a></li>
-                    <li><a href="./GAMES/4Metro.html" target="_blank">Metro <sup>4</sup></a></li>
-                    <li><a href="./GAMES/5Inter.html" target="_blank">International <sup>5</sup></a></li>
-                    <li><a href="./GAMES/6Gold.html" target="_blank">Gold <sup>6</sup></a></li>
-                    <li><a href="./GAMES/7O6.html" target="_blank">06 <sup>7</sup></a></li>
-                    <li><a href="./GAMES/8Jackpot.html" target="_blank">Jackpot <sup>8</sup></a></li>
-                    <li><a href="./GAMES/9Club-m.html" target="_blank">Club Master <sup>9</sup></a></li>
+                    <li><a href="./GAMES/1Diamond.html">Diamond <sup>1</sup></a></li>
+                    <li><a href="./GAMES/2People.html">People <sup>2</sup></a></li>
+                    <li><a href="./GAMES/3Bingo.html">Bingo <sup>3</sup></a></li>
+                    <li><a href="./GAMES/4Metro.html">Metro <sup>4</sup></a></li>
+                    <li><a href="./GAMES/5Inter.html">International <sup>5</sup></a></li>
+                    <li><a href="./GAMES/6Gold.html">Gold <sup>6</sup></a></li>
+                    <li><a href="./GAMES/7O6.html">06 <sup>7</sup></a></li>
+                    <li><a href="./GAMES/8Jackpot.html">Jackpot <sup>8</sup></a></li>
+                    <li><a href="./GAMES/9Club-m.html">Club Master <sup>9</sup></a></li>
                     <li><a href="./GAMES/10Super.html">Super <sup>10</sup></a></li>
-                    <li><a href="./GAMES/11Tota.html" target="_blank">Tota <sup>11</sup></a></li>
-                    <li><a href="./GAMES/12Mark-II.html" target="_blank">Mark-II <sup>12</sup></a> </li>
-                    <li><a href="./GAMES/13Vag.html" target="_blank">Vag <sup>13</sup></a></li>
-                    <li><a href="./GAMES/14Enugu.html" target="_blank">Enugu <sup>14</sup></a></li>
-                    <li><a href="./GAMES/15Lucky.html" target="_blank">Lucky <sup>15</sup></a></li>
-                    <li><a href="./GAMES/16Fair-c.html" target="_blank">Fair Chance <sup>16</sup></a></li>
-                    <li><a href="./GAMES/17Royal.html" target="_blank">Royal <sup>17</sup></a></li>
-                    <li><a href="./GAMES/18MSP.html" target="_blank">MSP <sup>18</sup></a></li>
-                    <li><a href="./GAMES/19LUCKY-G.html" target="_blank">LUCKY G <sup>19</sup></a></li>
-                    <li><a href="./GAMES/20Midweek.html" target="_blank">MIDWEEK <sup>20</sup></a> </li>
-                    <li><a href="./GAMES/21Fortune.html" target="_blank">FORTUNE <sup>21</sup></a></li>
-                    <li><a href="./GAMES/22Bonanza.html" target="_blank">BONANZA <sup>22</sup></a></li>
-                    <li><a href="./GAMES/23King.html" target="_blank"> Premier King <sup>23</sup></a></li>
-                    <li><a href="./GAMES/24National.html" target="_blank">NATIONAL <sup>24</sup></a></li>
-                    <li><a href="./GAMES/25Aseda.html" target="_blank">ASEDA <sup>25</sup></a></li>
+                    <li><a href="./GAMES/11Tota.html">Tota <sup>11</sup></a></li>
+                    <li><a href="./GAMES/12Mark-II.html">Mark-II <sup>12</sup></a> </li>
+                    <li><a href="./GAMES/13Vag.html">Vag <sup>13</sup></a></li>
+                    <li><a href="./GAMES/14Enugu.html">Enugu <sup>14</sup></a></li>
+                    <li><a href="./GAMES/15Lucky.html">Lucky <sup>15</sup></a></li>
+                    <li><a href="./GAMES/16Fair-c.html">Fair Chance <sup>16</sup></a></li>
+                    <li><a href="./GAMES/17Royal.html">Royal <sup>17</sup></a></li>
+                    <li><a href="./GAMES/18MSP.html">MSP <sup>18</sup></a></li>
+                    <li><a href="./GAMES/19LUCKY-G.html">LUCKY G <sup>19</sup></a></li>
+                    <li><a href="./GAMES/20Midweek.html">MIDWEEK <sup>20</sup></a> </li>
+                    <li><a href="./GAMES/21Fortune.html">FORTUNE <sup>21</sup></a></li>
+                    <li><a href="./GAMES/22Bonanza.html">BONANZA <sup>22</sup></a></li>
+                    <li><a href="./GAMES/23King.html"> Premier King <sup>23</sup></a></li>
+                    <li><a href="./GAMES/24National.html">NATIONAL <sup>24</sup></a></li>
+                    <li><a href="./GAMES/25Aseda.html">ASEDA <sup>25</sup></a></li>
                 </ul>
                 <div class="navigation">
                     <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult"></i>Check Day Result</a>
