--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -675,11 +675,11 @@
                     <td class="winning" id="lbw">22</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">81</td>
+                    <td class="machine">3</td>
+                    <td class="machine">65</td>
+                    <td class="machine">29</td>
+                    <td class="machine" id="lbm">80</td>
                 </tr>
             </tbody>
 
