--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">tuesday 9/4/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">69 - 38 - 56 - 83 - 11</p>
-                <p class="machine">49 - 47 - 55 - 46 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">85 - 64 - 26 - 30 - 88</p>
-                <p class="machine">17 - 13 - 76 - 32 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">90 - 6 - 55 - 68 - 3</p>
-                <p class="machine">5 - 86 - 57 - 43 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">73 - 80 - 45 - 84 - 66</p>
-                <p class="machine">42 - 36 - 47 - 89 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky-g</h3>
-                <p class="winning">39 - 59 - 5 - 84 - 57</p>
-                <p class="machine">62 - 22 - 50 - 68 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">84 - 11 - 86 - 74 - 46</p>
-                <p class="machine">28 - 44 - 5 - 22 - 67</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 10/04/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">30 - 13 - 70 - 1 - 22</p>
-                <p class="machine"></p>        
+                <p class="machine">81 - 3 - 65 - 29 - 80</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">40 - 62 - 68 - 82 - 75</p>
                 <p class="machine">48 - 66 - 46 - 67 - 50</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 11/4/2024</h2>
+            <article>
+                <h3 class="game">Peoples</h3>
+                <p class="winning">80 - 58 - 82 - 44 - 28</p>
+                <p class="machine">61 - 29 - 41 - 37 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">54 - 55 - 87 - 13 - 4</p>
+                <p class="machine">75 - 32 - 74 - 33 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">64 - 37 - 58 - 48 - 5</p>
+                <p class="machine">53 - 47 - 42 - 16 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">33 - 40 - 89 - 78 - 27</p>
+                <p class="machine">22 - 77 - 29 - 15 - 12</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">30 - 2 - 48 - 80 - 72</p>
+                <p class="machine">69 - 68 - 63 - 1 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
