--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago results">
-            <h2 class="date">wednesday 10/04/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">45 - 56 - 3 - 47 - 82</p>
-                <p class="machine">28 - 89 - 87 - 62 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">61 - 82 - 36 - 84 - 32</p>
-                <p class="machine">12 - 17 - 2 - 42 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">7 - 65 - 82 - 16 - 33</p>
-                <p class="machine">6 - 48 - 42 - 60 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">62 - 60 - 84 - 65 - 40</p>
-                <p class="machine">79 - 54 - 22 - 78 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">30 - 13 - 70 - 1 - 22</p>
-                <p class="machine">81 - 3 - 65 - 29 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">40 - 62 - 68 - 82 - 75</p>
-                <p class="machine">48 - 66 - 46 - 67 - 50</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 11/4/2024</h2>
             <article>
                 <h3 class="game">Peoples</h3>
@@ -257,6 +223,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">30 - 2 - 48 - 80 - 72</p>
                 <p class="machine">69 - 68 - 63 - 1 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 12/4/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">27 - 62 - 16 - 43 - 66</p>
+                <p class="machine">46 - 34 - 33 - 10 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
             <article>
                 <h3 class="game"></h3>
