APRIL 12/Friday/2024 Metro

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,9 +239,9 @@
                 <p class="machine">46 - 34 - 33 - 10 - 13</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Metro</h3>
+                <p class="winning">29 - 16 - 54 - 83 - 79</p>
+                <p class="machine">18 - 3 - 64 - 71 - 20</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
