--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -666,20 +666,20 @@
             <tbody>
                 <tr>
                     <td class="serial-num">15</td>
-                    <td class="days"><small>April 11th</small></td>
+                    <td class="days"><small>April 12th sat</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning">N</td>
-                    <td class="winning">O</td>
-                    <td class="winning">T</td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">3</td>
+                    <td class="winning">81</td>
+                    <td class="winning">73</td>
+                    <td class="winning">74</td>
+                    <td class="winning" id="lbw">18</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
-                    <td class="machine">Y</td>
-                    <td class="machine">E</td>
-                    <td class="machine">T</td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody>
