--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,24 +244,29 @@
                 <p class="machine">18 - 3 - 64 - 71 - 20</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Gold</h3>
+                <p class="winning">52 - 30 - 61 - 24 - 81</p>
+                <p class="machine">26 - 6 - 9 - 17 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">61 - 35 - 87 - 78 - 43</p>
+                <p class="machine">47 - 79 - 60 - 10 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">82 - 80 - 23 - 19 - 56</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">3 - 81 - 73 - 74 - 18</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">30 - 11 - 13 - 47 - 78</p>
+                <p class="machine">63 - 1 - 6 - 85 - 89</p>        
             </article>
         </section>
     </div>
