--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -660,14 +660,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">15</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 12th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">82</td>
+                    <td class="winning">80</td>
+                    <td class="winning">23</td>
+                    <td class="winning">19</td>
+                    <td class="winning" id="lbw">56</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
