APRIL 13/Saturday/ king

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,41 +197,7 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="two days ago results">
-            <h2 class="date">thursday 11/4/2024</h2>
-            <article>
-                <h3 class="game">Peoples</h3>
-                <p class="winning">80 - 58 - 82 - 44 - 28</p>
-                <p class="machine">61 - 29 - 41 - 37 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">54 - 55 - 87 - 13 - 4</p>
-                <p class="machine">75 - 32 - 74 - 33 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">64 - 37 - 58 - 48 - 5</p>
-                <p class="machine">53 - 47 - 42 - 16 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">33 - 40 - 89 - 78 - 27</p>
-                <p class="machine">22 - 77 - 29 - 15 - 12</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">30 - 2 - 48 - 80 - 72</p>
-                <p class="machine">69 - 68 - 63 - 1 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
+        <section aria-label="yesterdays results">
             <h2 class="date">friday 12/4/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -267,6 +233,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">30 - 11 - 13 - 47 - 78</p>
                 <p class="machine">63 - 1 - 6 - 85 - 89</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 13/4/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">12 - 16 - 54 - 87 - 39</p>
+                <p class="machine">14 - 28 - 27 - 41 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
