April 13/Saturday/ club

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -222,12 +222,12 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">82 - 80 - 23 - 19 - 56</p>
-                <p class="machine"></p>        
+                <p class="machine">13 - 64 - 31 - 57 - 36</p>        
             </article>
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">3 - 81 - 73 - 74 - 18</p>
-                <p class="machine"></p>        
+                <p class="machine">40 - 90 - 42 - 83 - 41</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
@@ -244,14 +244,14 @@
                 <p class="machine">14 - 28 - 27 - 41 - 25</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">32 - 86 - 18 - 34 - 55</p>
+                <p class="machine">4 - 49 - 28 - 76 - 83</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Club Master</h3>
+                <p class="winning">57 - 50 - 21 - 17 - 78</p>
+                <p class="machine">6 - 61 - 87 - 39 - 67</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
