--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -676,11 +676,11 @@
                     <td class="winning" id="lbw">18</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">40</td>
+                    <td class="machine">90</td>
+                    <td class="machine">42</td>
+                    <td class="machine">83</td>
+                    <td class="machine" id="lbm">41</td>
                 </tr>
             </tbody>
         
