--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
                         <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
                         <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                         <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
+                        <a href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-youtube"  aria-label="connect on our YouTube channel, watch live demo of how to navigate our platform"></i></a>
+
                     </div> 
                 </div>
                 <div class="developer">
