--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -254,19 +254,19 @@
                 <p class="machine">6 - 61 - 87 - 39 - 67</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">06</h3>
+                <p class="winning">8 - 71 - 54 - 81 - 7</p>
+                <p class="machine">69 - 4 - 15 - 37 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">24 - 45 - 37 - 26 - 18</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">7 - 79 - 23 - 52 - 40</p>
+                <p class="machine">54 - 21 - 44 - 6 - 86</p>        
             </article>
         </section>
     </div>
