--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -669,11 +669,11 @@
                     <td class="winning" id="lbw">18</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">13</td>
+                    <td class="machine">71</td>
+                    <td class="machine">73</td>
+                    <td class="machine">50</td>
+                    <td class="machine" id="lbm">43</td>
                 </tr>
             </tbody> 
 
