--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,45 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">friday 12/4/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">27 - 62 - 16 - 43 - 66</p>
-                <p class="machine">46 - 34 - 33 - 10 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">29 - 16 - 54 - 83 - 79</p>
-                <p class="machine">18 - 3 - 64 - 71 - 20</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">52 - 30 - 61 - 24 - 81</p>
-                <p class="machine">26 - 6 - 9 - 17 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">61 - 35 - 87 - 78 - 43</p>
-                <p class="machine">47 - 79 - 60 - 10 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">82 - 80 - 23 - 19 - 56</p>
-                <p class="machine">13 - 64 - 31 - 57 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">3 - 81 - 73 - 74 - 18</p>
-                <p class="machine">40 - 90 - 42 - 83 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">30 - 11 - 13 - 47 - 78</p>
-                <p class="machine">63 - 1 - 6 - 85 - 89</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 13/4/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -261,12 +222,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">24 - 45 - 37 - 26 - 18</p>
-                <p class="machine"></p>        
+                <p class="machine">13 - 71 - 73 - 50 - 43</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">7 - 79 - 23 - 52 - 40</p>
                 <p class="machine">54 - 21 - 44 - 6 - 86</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 14/4/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">68 - 54 - 73 - 71 - 23</p>
+                <p class="machine">38 - 10 - 84 - 14 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
