--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,9 +239,9 @@
                 <p class="machine">38 - 10 - 84 - 14 - 18</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">mark ii</h3>
+                <p class="winning">65 - 33 - 11 - 17 - 27</p>
+                <p class="machine">87 - 20 - 88 - 7 - 71</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
