APRIL 14/Sunday/2024 Enugu

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,9 +244,9 @@
                 <p class="machine">87 - 20 - 88 - 7 - 71</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">16 - 82 - 27 - 69 - 57</p>
+                <p class="machine">54 - 17 - 35 - 2 - 15</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
