--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -678,14 +678,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">15</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 14th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">13</td>
+                    <td class="winning">80</td>
+                    <td class="winning">69</td>
+                    <td class="winning">18</td>
+                    <td class="winning" id="lbw">87</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
