--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">54 - 17 - 35 - 2 - 15</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">27 - 29 - 34 - 52 - 72</p>
+                <p class="machine">85 - 37 - 75 - 28 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">13 - 80 - 69 - 18 - 87</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">7 - 89 - 59 - 26 - 58</p>
+                <p class="machine">49 - 52 - 82 - 27 - 23</p>        
             </article>
         </section>
     </div>
