APRIL 15/Monday/2024 Diamond

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">saturday 13/4/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">12 - 16 - 54 - 87 - 39</p>
-                <p class="machine">14 - 28 - 27 - 41 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">32 - 86 - 18 - 34 - 55</p>
-                <p class="machine">4 - 49 - 28 - 76 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">57 - 50 - 21 - 17 - 78</p>
-                <p class="machine">6 - 61 - 87 - 39 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">8 - 71 - 54 - 81 - 7</p>
-                <p class="machine">69 - 4 - 15 - 37 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">24 - 45 - 37 - 26 - 18</p>
-                <p class="machine">13 - 71 - 73 - 50 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">7 - 79 - 23 - 52 - 40</p>
-                <p class="machine">54 - 21 - 44 - 6 - 86</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 14/4/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Aseda</h3>
                 <p class="winning">13 - 80 - 69 - 18 - 87</p>
-                <p class="machine"></p>        
+                <p class="machine">62 - 50 - 33 - 6 - 43</p>        
             </article>
             <article>
                 <h3 class="game">Tota</h3>
                 <p class="winning">7 - 89 - 59 - 26 - 58</p>
                 <p class="machine">49 - 52 - 82 - 27 - 23</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 15/04/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">6 - 31 - 55 - 57 - 30</p>
+                <p class="machine">81 - 37 - 38 - 61 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
