--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,14 +239,14 @@
                 <p class="machine">81 - 37 - 38 - 61 - 82</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">People</h3>
+                <p class="winning">17 - 45 - 49 - 29 - 85</p>
+                <p class="machine">63 - 55 - 80 - 18 - 10</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">52 - 90 - 63 - 36 - 41</p>
+                <p class="machine">37 - 45 - 81 - 16 - 47</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
