--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">37 - 45 - 81 - 16 - 47</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">18 - 75 - 74 - 40 - 57</p>
+                <p class="machine">80 - 41 - 51 - 88 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">47 - 87 - 32 - 2 - 45</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">58 - 27 - 16 - 79 - 5</p>
+                <p class="machine">21 - 8 - 73 - 87 - 13</p>        
             </article>
         </section>
     </div>
