--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">sunday 14/4/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">68 - 54 - 73 - 71 - 23</p>
-                <p class="machine">38 - 10 - 84 - 14 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">65 - 33 - 11 - 17 - 27</p>
-                <p class="machine">87 - 20 - 88 - 7 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">16 - 82 - 27 - 69 - 57</p>
-                <p class="machine">54 - 17 - 35 - 2 - 15</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">27 - 29 - 34 - 52 - 72</p>
-                <p class="machine">85 - 37 - 75 - 28 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">13 - 80 - 69 - 18 - 87</p>
-                <p class="machine">62 - 50 - 33 - 6 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">7 - 89 - 59 - 26 - 58</p>
-                <p class="machine">49 - 52 - 82 - 27 - 23</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 15/04/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">47 - 87 - 32 - 2 - 45</p>
-                <p class="machine"></p>        
+                <p class="machine">76 - 46 - 88 - 79 - 77</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">58 - 27 - 16 - 79 - 5</p>
                 <p class="machine">21 - 8 - 73 - 87 - 13</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 16/04/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">56 - 85 - 54 - 69 - 2</p>
+                <p class="machine">6 - 64 - 40 - 76 - 47</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
