--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -232,36 +232,36 @@
         </section>
 
         <section aria-label="today result">
-            <h2 class="date">tuesday 16/04/2024</h2>
+            <h2 class="date"></h2>
             <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">56 - 85 - 54 - 69 - 2</p>
-                <p class="machine">6 - 64 - 40 - 76 - 47</p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">4 - 53 - 10 - 23 - 70</p>
+                <p class="machine">85 - 13 - 29 - 36 - 83</p>        
             </article>
             <article>
-                <h3 class="game">06</h3>
-                <p class="winning">76 - 19 - 62 - 38 - 20</p>
-                <p class="machine">53 - 39 - 87 - 58 - 48</p>        
+                <h3 class="game">mark ii</h3>
+                <p class="winning">38 - 2 - 90 - 14 - 35</p>
+                <p class="machine">57 - 82 - 51 - 75 - 85</p>        
             </article>
             <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">72 - 86 - 62 - 14 - 35</p>
-                <p class="machine">6 - 90 - 34 - 80 - 85</p>        
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">78 - 90 - 15 - 46 - 23</p>
-                <p class="machine">61 - 30 - 41 - 74 - 9</p>        
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">71 - 83 - 30 - 35 - 12</p>
-                <p class="machine">74 - 86 - 60 - 56 - 20</p>        
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">78 - 69 - 82 - 14 - 53</p>
-                <p class="machine">54 - 39 - 60 - 67 - 84</p>        
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
