April 17/Wed/2024 vag

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -232,7 +232,7 @@
         </section>
 
         <section aria-label="today result">
-            <h2 class="date"></h2>
+            <h2 class="date">wednesday 17/4/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
                 <p class="winning">4 - 53 - 10 - 23 - 70</p>
@@ -244,9 +244,9 @@
                 <p class="machine">57 - 82 - 51 - 75 - 85</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">66 - 80 - 7 - 18 - 6</p>
+                <p class="machine">82 - 56 - 89 - 74 - 24</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
