--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">82 - 56 - 89 - 74 - 24</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">36 - 14 - 35 - 26 - 9</p>
+                <p class="machine">4 - 11 - 1 - 75 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">38 - 1 - 88 - 71 - 84</p>
+                <p class="machine">22 - 12 - 40 - 90 - 50</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">6 - 15 - 67 - 42 - 18</p>
+                <p class="machine">87 - 24 - 79 - 30 - 31</p>        
             </article>
         </section>
     </div>
