--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">monday 15/04/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">6 - 31 - 55 - 57 - 30</p>
-                <p class="machine">81 - 37 - 38 - 61 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">17 - 45 - 49 - 29 - 85</p>
-                <p class="machine">63 - 55 - 80 - 18 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">52 - 90 - 63 - 36 - 41</p>
-                <p class="machine">37 - 45 - 81 - 16 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">18 - 75 - 74 - 40 - 57</p>
-                <p class="machine">80 - 41 - 51 - 88 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">47 - 87 - 32 - 2 - 45</p>
-                <p class="machine">76 - 46 - 88 - 79 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">58 - 27 - 16 - 79 - 5</p>
-                <p class="machine">21 - 8 - 73 - 87 - 13</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 17/4/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -264,6 +230,41 @@
                 <p class="machine">87 - 24 - 79 - 30 - 31</p>        
             </article>
         </section>
+
+        
+    <section aria-label="today result">
+        <h2 class="date">thursday 18/4/2024</h2>
+        <article>
+            <h3 class="game">People</h3>
+            <p class="winning">35 - 62 - 20 - 82 - 86</p>
+            <p class="machine">3 - 41 - 51 - 66 - 72</p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+    </section>
     </div>
     
     <div class="gameList">
