April 18th 2024 Fair chance

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -240,9 +240,9 @@
             <p class="machine">3 - 41 - 51 - 66 - 72</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">Fair Chance</h3>
+            <p class="winning">47 - 26 - 71 - 77 - 30</p>
+            <p class="machine">68 - 7 - 17 - 29 - 80</p>        
         </article>
         <article>
             <h3 class="game"></h3>
