April 18 thursday / Diamond

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -245,9 +245,9 @@
             <p class="machine">68 - 7 - 17 - 29 - 80</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">Diamond</h3>
+            <p class="winning">72 - 8 - 57 - 29 - 83</p>
+            <p class="machine">22 - 14 - 23 - 39 - 2</p>        
         </article>
         <article>
             <h3 class="game"></h3>
