--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
             <p class="machine">22 - 14 - 23 - 39 - 2</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">International</h3>
+            <p class="winning">75 - 24 - 79 - 62 - 14</p>
+            <p class="machine">15 - 82 - 86 - 46 - 43</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">fortune</h3>
+            <p class="winning">2 - 51 - 57 - 29 - 28</p>
+            <p class="machine">67 - 43 - 42 - 46 - 18</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">Bingo</h3>
+            <p class="winning">20 - 64 - 57 - 21 - 48</p>
+            <p class="machine">61 - 18 - 82 - 83 - 26</p>        
         </article>
     </section>
     </div>
